Cambios Varios iniciales

--- a/file/pages/landing-page.html
+++ b/file/pages/landing-page.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="mb-4">
-    <nav class="row fixed-top " style="background-color: rgb(36, 43, 43); color: white;">
+    <nav id="sticky-header" class="row " style="background-color: rgb(36, 43, 43); color: white;">
       <!-- Seccion izquierda del encabezado -->
       <div class=" row align-items-center pl-3 ">
 
@@ -39,7 +39,7 @@
       </div>
 
       <!-- Seccion central del ecabezado -->
-      <div class="col-5 mx-4 " style="background-color: rgb(20, 37, 70); color: white;">
+      <div class="col-5 mx-4   " style="background-color: rgb(20, 37, 70); color: white;">
         <div class="row align-items-center">
           <div class="col-4 " style="background-color: transparent;">
             <a href="#"><img src="../../data/img/logo-texto-modificado-200px.png" alt="Longo de Zuhause" class="pb-3"
@@ -70,7 +70,7 @@
 
   <div class="py-5">
 
-    <div class="container my-5" style="height: 80vh;background-color: aqua;">
+    <div class="container my-5 " style="height: 80vh;background-color: aqua;">
 
       <div class="col-lg-8 col-md-12" style="background-color: blueviolet;">
         <div class="singular_categoria wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
@@ -102,6 +102,7 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="../js/jquery-3.3.1.slim.min.js"></script>
+  <script src="../js/main-js.js"></script>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/wow.js"></script>
   <script src="../js/jquery-1.12.4.min.js"></script>
