--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -67,21 +67,22 @@
     </div>
     <!--/#home-slider-->
     <div class="main-nav">
-      <div class="container">
+      <div class="container-fluid" style="margin: 0 100px 0 100px;" >
         <div class="navbar-header">
           <a href="../index.html">
-          <img class="img-responsive   "  src="images/logo.png" alt="logo">
+            <img class="img-responsive" src="images/logo.png" alt="logo">
           </a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse  navbar-collapse" >
           <ul class="nav navbar-nav navbar-right">
             <li class="scroll active"><a href="#home">Portada</a></li>
             <li class="scroll"><a href="#services">Nuestro servicios</a></li>
             <li class="scroll"><a href="#about-us">Conocenos</a></li>
             <li class="scroll"><a href="#portfolio">Categorias</a></li>
+            <li class="scroll"><a href="#membresias">Categorias</a></li>
             <li class="scroll"><a href="#contact">Contactanos</a></li>
-            <li class="scroll"><a href="#contact">Iniciar Sesion</a></li>
-            <li class="scroll"><a href="#contact">Registrase</a></li>
+            <li class="scroll"><a href="#">Iniciar Sesion</a></li>
+            <li class="scroll"><a href="#">Registrase</a></li>
           </ul>
         </div>
 
@@ -90,7 +91,7 @@
     <!--/#main-nav-->
   </header>
   <!--/#home-->
-  
+
   <section id="services">
     <div class="container">
       <div class="heading wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -184,7 +185,7 @@
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
@@ -214,7 +215,8 @@
                 <div class="overlay-text ">
                   <div class="folio-info ">
                     <h3>Fontanería</h3>
-                    <p  style="margin: 0 auto; width: 80%">Materiales y equipo para matenimiento, acondicionamiento o extension</p>
+                    <p style="margin: 0 auto; width: 80%">Materiales y equipo para matenimiento, acondicionamiento o
+                      extension</p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -260,7 +262,8 @@
                 <div class="overlay-text">
                   <div class="folio-info">
                     <h3>Baño</h3>
-                    <p style="margin: 0 auto; width: 80%">Los mejores materiales para el Baño soñado. Con asistencia Professional</p>
+                    <p style="margin: 0 auto; width: 80%">Los mejores materiales para el Baño soñado. Con asistencia
+                      Profesional</p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -283,7 +286,8 @@
                 <div class="overlay-text">
                   <div class="folio-info">
                     <h3>Jardinería</h3>
-                    <p style="margin: 0 auto; width: 80%">Consejos de expertos y sistemas soñado para su jardin perfecto</p>
+                    <p style="margin: 0 auto; width: 80%">Consejos de expertos y sistemas soñado para su jardin perfecto
+                    </p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -306,7 +310,8 @@
                 <div class="overlay-text">
                   <div class="folio-info">
                     <h3>Pinturas</h3>
-                    <p style="margin: 0 auto; width: 80%">Todos los colores que quiera. Le creamos el color que busca</p>
+                    <p style="margin: 0 auto; width: 80%">Todos los colores que quiera. Le creamos el color que busca
+                    </p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -329,7 +334,8 @@
                 <div class="overlay-text">
                   <div class="folio-info">
                     <h3>Diseños de interiores</h3>
-                    <p style="margin: 0 auto; width: 80%">"Falta esta categoria"</p>
+                    <p style="margin: 0 auto; width: 80%">Todo tipo de accesorios para los interiores mas espectaculares
+                    </p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -352,7 +358,8 @@
                 <div class="overlay-text">
                   <div class="folio-info">
                     <h3>Electrodomésticos</h3>
-                    <p style="margin: 0 auto; width: 80%">"Falta esta categoria"</p>
+                    <p style="margin: 0 auto; width: 80%">Las mejores marcas, con los mejores productos y asesoramiento
+                      de expertos</p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -374,8 +381,9 @@
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Reparaciones eléctricas</h3>
-                    <p style="margin: 0 auto; width: 80%">"Falta esta categoria"</p>
+                    <h3>Reparaciones generales</h3>
+                    <p style="margin: 0 auto; width: 80%">Herramientas para cada problema en su casa y atencion tecnica
+                      de calidad</p>
                   </div>
                   <div class="folio-overview">
                     <span class="folio-link"><a class="folio-read-more" href="#"
@@ -425,7 +433,7 @@
       <div class="row">
         <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms"
           data-wow-delay="300ms">
-          <h2>Pricing Table</h2>
+          <h2>Membresias</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua ut enim ad minim veniam</p>
         </div>
@@ -434,62 +442,65 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <h3>Basic</h3>
+              <h3>Basica</h3>
               <div class="price">
-                $9<span>/Month</span>
+                $9<span>/mensual</span>
               </div>
               <ul>
-                <li>Free Setup</li>
-                <li>10GB Storage</li>
-                <li>100GB Bandwith</li>
-                <li>5 Products</li>
+                <li>- Intalacion gratis</li>
+                <li>- Bodega de 16 metros cubicos</li>
+                <li>- Bonos frecuentes</li>
+                <li>- 3 productos unicos gratis</li>
               </ul>
-              <a href="#" class="btn btn-lg btn-primary">Sign up</a>
+              <a href="#" class="btn btn-lg btn-primary">Comenzar</a>
             </div>
           </div>
           <div class="col-sm-3">
             <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="500ms">
-              <h3>Standard</h3>
+              <h3>Estandar</h3>
               <div class="price">
-                $19<span>/Month</span>
+                $19<span>/Mensual</span>
               </div>
               <ul>
-                <li>Free Setup</li>
-                <li>10GB Storage</li>
-                <li>100GB Bandwith</li>
-                <li>5 Products</li>
+                <li>- Intalacion gratis</li>
+                <li>- Bodega de 20 metros cubicos</li>
+                <li>- Bonos cada semana</li>
+                <li>- 5 productos unicos gratis</li>
               </ul>
-              <a href="#" class="btn btn-lg btn-primary">Sign up</a>
+              <a href="#" class="btn btn-lg btn-primary">Comenzar</a>
             </div>
           </div>
           <div class="col-sm-3">
             <div class="single-table featured wow flipInY" data-wow-duration="1000ms" data-wow-delay="800ms">
-              <h3>Featured</h3>
+              <h3>//// Destacada ////</h3>
               <div class="price">
-                $29<span>/Month</span>
+                $29<span>/Mensual</span>
               </div>
               <ul>
-                <li>Free Setup</li>
-                <li>10GB Storage</li>
-                <li>100GB Bandwith</li>
-                <li>5 Products</li>
+                <li>- Intalacion gratis</li>
+                <li>- 2 Bodega de 20 metros cubicos</li>
+                <li>- Descuentos permanentes</li>
+                <li>- 10 productos unicos gratis</li>
               </ul>
-              <a href="#" class="btn btn-lg btn-primary">Sign up</a>
+              <a href="#" class="btn btn-lg btn-primary">Comenzar</a>
             </div>
           </div>
           <div class="col-sm-3">
             <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="1100ms">
-              <h3>Professional</h3>
+              <h3>Profesional</h3>
               <div class="price">
-                $49<span>/Month</span>
+                $49<span>/Mensual</span>
               </div>
               <ul>
-                <li>Free Setup</li>
-                <li>10GB Storage</li>
-                <li>100GB Bandwith</li>
-                <li>5 Products</li>
-              </ul>
-              <a href="#" class="btn btn-lg btn-primary">Sign up</a>
+                <li>- Intalacion gratis</li>
+                <li>- 2 Bodega de 20 metros cubicos</li>
+                <li>- Descuentos permanentes</li>
+                <li>- 10 productos unicos gratis</li>
+                <li>- Reparaciones gratis</li>
+                <li>- Acceso atincipado a productos nuevos</li>
+ 
+              </ul> 
+              <a href="#" class="btn btn-lg btn-primary">Comenzar</a>
             </div>
           </div>
         </div>
@@ -497,45 +508,6 @@
     </div>
   </section>
   <!--/#pricing-->
-
-  <section id="twitter" class="parallax">
-    <div>
-      <a class="twitter-left-control" href="#twitter-carousel" role="button" data-slide="prev"><i
-          class="fa fa-angle-left"></i></a>
-      <a class="twitter-right-control" href="#twitter-carousel" role="button" data-slide="next"><i
-          class="fa fa-angle-right"></i></a>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <div class="twitter-icon text-center">
-              <i class="fa fa-twitter"></i>
-              <h4>Themeum</h4>
-            </div>
-            <div id="twitter-carousel" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="item active wow fadeIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-                  <p>Introducing Shortcode generator for Helix V2 based templates <a href="#"><span>#helixframework
-                        #joomla</span> http://bit.ly/1qlgwav</a></p>
-                </div>
-                <div class="item">
-                  <p>Introducing Shortcode generator for Helix V2 based templates <a href="#"><span>#helixframework
-                        #joomla</span> http://bit.ly/1qlgwav</a></p>
-                </div>
-                <div class="item">
-                  <p>Introducing Shortcode generator for Helix V2 based templates <a href="#"><span>#helixframework
-                        #joomla</span> http://bit.ly/1qlgwav</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--/#twitter-->
-
-  
-
   <section id="contact">
     <div id="google-map" class="wow fadeIn" data-latitude="52.365629" data-longitude="4.871331"
       data-wow-duration="1000ms" data-wow-delay="400ms"></div>
@@ -544,7 +516,7 @@
         <div class="row">
           <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms"
             data-wow-delay="300ms">
-            <h2>Contact Us</h2>
+            <h2>Contactanos</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua ut enim ad minim veniam</p>
           </div>
@@ -629,7 +601,8 @@
     </div>
   </footer>
 
-  <script src="https://kit.fontawesome.com/f665ff0f86.js" crossorigin="anonymous"></script><!-- iconos desde internet -->
+  <script src="https://kit.fontawesome.com/f665ff0f86.js" crossorigin="anonymous"></script>
+  <!-- iconos desde internet -->
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
