Landig Page terminada

--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -79,10 +79,10 @@
             <li class="scroll"><a href="#services">Nuestro servicios</a></li>
             <li class="scroll"><a href="#about-us">Conocenos</a></li>
             <li class="scroll"><a href="#portfolio">Categorias</a></li>
-            <li class="scroll"><a href="#membresias">Categorias</a></li>
+            <li class="scroll"><a href="#membresias">Membresia</a></li>
             <li class="scroll"><a href="#contact">Contactanos</a></li>
-            <li class="scroll"><a href="#">Iniciar Sesion</a></li>
-            <li class="scroll"><a href="#">Registrase</a></li>
+            <li class="scroll"><a href="#contact">Iniciar Sesion</a></li>
+            <li class="scroll"><a href="#contact">Registrase</a></li>
           </ul>
         </div>
 
@@ -428,7 +428,7 @@
   </section>
   <!--/#features-->
 
-  <section id="pricing">
+  <section id="membresias">
     <div class="container">
       <div class="row">
         <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms"
@@ -528,25 +528,25 @@
                 <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <input type="text" name="name" class="form-control" placeholder="Name" required="required">
+                      <input type="text" name="Nombre " class="form-control" placeholder="Name" required="required">
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="form-group">
-                      <input type="email" name="email" class="form-control" placeholder="Email Address"
+                      <input type="email" name="email" class="form-control" placeholder="Corro electronico"
                         required="required">
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="text" name="subject" class="form-control" placeholder="Subject" required="required">
+                  <input type="text" name="subject" class="form-control" placeholder="Asunto" required="required">
                 </div>
                 <div class="form-group">
-                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message"
+                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Cuerpo del mensaje"
                     required="required"></textarea>
                 </div>
                 <div class="form-group">
-                  <button type="submit" class="btn-submit">Send Now</button>
+                  <button type="submit" class="btn-submit">Enviar mensaje</button>
                 </div>
               </form>
             </div>
@@ -558,7 +558,7 @@
                   <li><i class="fa fa-map-marker"></i> <span> Address:</span> 2400 South Avenue A </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +928 336 2000 </li>
                   <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com">
-                      support@oxygen.com</a></li>
+                      edwinolivera33@gmail.com</a></li>
                   <li><i class="fa fa-globe"></i> <span> Website:</span> <a href="#">www.sitename.com</a></li>
                 </ul>
               </div>
@@ -573,7 +573,7 @@
     <div class="footer-top wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
       <div class="container text-center">
         <div class="footer-logo">
-          <a href="index.html"><img class="img-responsive" src="images/logo.png" alt=""></a>
+          <a href="../index.html"><img class="img-responsive" src="images/logo.png" alt=""></a>
         </div>
         <div class="social-icons">
           <ul>
@@ -591,10 +591,10 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2014 Oxygen Theme.</p>
+            <p>&copy; 2020 Zuhause.</p>
           </div>
           <div class="col-sm-6">
-            <p class="pull-right">Designed by <a href="http://www.themeum.com/">Themeum</a></p>
+            <p class="pull-right">Diseñado por <a href="https://www.facebook.com/Edwin.R.Olivera/" target="_blank">Edwin Olivera</a></p>
           </div>
         </div>
       </div>
