Implementacion de correo iniciada

--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -81,11 +81,12 @@
             <li class="scroll"><a href="#portfolio">Categorias</a></li>
             <li class="scroll"><a href="#membresias">Membresia</a></li>
             <li class="scroll"><a href="#contact">Contactanos</a></li>
-            <li class="scroll"><a href="#contact">Iniciar Sesion</a></li>
-            <li class="scroll"><a href="#contact">Registrase</a></li>
+            <li  class="scroll" ></li>
+            <a href=""> <input class="btn btn-primary"   value="Iniciar sesion"></a>
+            <a href=""> <input class="btn btn-primary" type="button" value="Registrarse"></a>
           </ul>
         </div>
-
+        
       </div>
     </div>
     <!--/#main-nav-->
