--- a/cart.html
+++ b/cart.html
@@ -267,12 +267,12 @@
                                             <li class="active"><a href="#">Local Delivery: $2.00</a></li>
                                         </ul>
                                         <h6>Calculate Shipping <i class="fa fa-caret-down" aria-hidden="true"></i></h6>
-                                        <select class="shipping_select">
+                                        <select class="shipping_select select-nice">
                                             <option value="1">Bangladesh</option>
                                             <option value="2">India</option>
                                             <option value="4">Pakistan</option>
                                         </select>
-                                        <select class="shipping_select">
+                                        <select class="shipping_select select-nice">
                                             <option value="1">Select a State</option>
                                             <option value="2">Select a State</option>
                                             <option value="4">Select a State</option>
