--- a/dashboard (panel de control)/plugins/metismenu/test/mini.html
+++ b/dashboard (panel de control)/plugins/metismenu/test/mini.html
@@ -19,7 +19,7 @@
           <li>
             <a href="#">
               <span class="fa fa-2x fa-home"></span>
-              <span class="title">Home</span>
+              <span class="title">Inicio</span>
             </a>
           </li>
           <li>
